Added VLN, adjusted minor syntactical errors

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </li>
             <li class="app">
                 <a href="https://discord.com" target="_blank">
-                    <img alt="Discord" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/91_Discord_logo_logos-512.png" height="100px" width="100px">
+                    <img alt="Discord" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/91_Discord_logo_logos-512.png" height="100px" width="105px">
                 </a>
             </li>
             <li class="app">
@@ -61,6 +61,11 @@
             <li class="app">
                 <a href="https://lichess.org" target="_blank">
                     <img alt="Lichess" src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Lichess_new_logo.png" height="100px" width="100px">
+                </a>
+            </li>
+            <li>
+                <a href="https://vln.ucourses.com/d2l/login?logout=1" target="_blank">
+                    <img alt="VLN" src="https://pbs.twimg.com/profile_images/1164296285/header_1-resized_400x400.gif" height="100px" width="100px">
                 </a>
             </li>
         </ul>
