--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://image.flaticon.com/icons/png/512/69/69962.png">
     <script src="./time.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>Homepage</title>
