--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta type="author" description="Ry4n_W">
+    <meta type="description" description="Homepage."
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/69/69962.png">
