--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta type="author" description="Ry4n_W">
-    <meta type="description" description="Homepage."
+    <meta type="description" description="Homepage.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/69/69962.png">
@@ -23,7 +23,6 @@
 
         <h1 id="theDate"></h1>
 
-        <h1 id="Test">Boom</h1>
 
     </div>
 
