--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
 
 <head>
-    <meta type="author" content="Ry4nW">
-    <meta type="description" content="A personalized Homepage project to learn basic Front-End tools.">
+    <meta name="author" content="Ry4nW">
+    <meta name="description" content="A personalized Homepage project to learn basic Front-End tools.">
     <meta name="keywords" content="Homepage, quotes, time, date, search, HTML, CSS, JavaScript">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://image.flaticon.com/icons/png/512/69/69962.png">
+    <link rel="icon" href="icons/Tab Logo (R).png">
     <link rel="stylesheet" href="./style.css">
-    <script defer src="scripts/TimeDate.js"></script>
+    <script src="scripts/TimeDate.js"></script>
     <title>Homepage</title>
 </head>
 
