--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 
 <head>
     <meta name="author" content="Ry4nW">
-    <meta name="description" content="A personalized Homepage project to learn basic Front-End tools.">
+    <meta name="description" content="A personalized Homepage project to learn basic frontend tools.">
     <meta name="keywords" content="Homepage, quotes, time, date, search, HTML, CSS, JavaScript">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icons/Tab Logo (R).png">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="../icons/Tab%20Logo%20(R).png">
+    <link rel="stylesheet" href="style.css">
     <script src="scripts/TimeDate.js"></script>
     <title>Homepage</title>
 </head>
