--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icons/Tab%20Logo%20(R).png">
-    <link rel="stylesheet" href="src/style.css">
-    <script src="src/scripts/TimeDate.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="scripts/TimeDate.js"></script>
     <title>Homepage</title>
 </head>
 
