feat: timed backgrounds, adjusted search

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icons/Tab%20Logo%20(R).png">
     <link rel="stylesheet" href="style.css">
-    <script src="scripts/TimeDate.js"></script>
     <title>Homepage</title>
 </head>
 
@@ -30,7 +29,7 @@
             <label>
                 <input type="text" name="q" placeholder="Whats on your mind?" size="125" />
             </label>
-            <input type="submit" value="Search">
+            <input id="submitSearchBtn" type="submit" value="Search">
         </form>
 
     </div>
@@ -69,5 +68,7 @@
             </li>
         </ul>
     </div>
+
+    <script src="scripts/TimeDate.js"></script>
 
 </body>
