--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1 id="theGreeting"></h1>
         <h1 id="theTime"></h1>
         <h1 id="theDate"></h1>
+        <h1 id="theInspirationalQuote"></h1>
 
     </div>
 
@@ -78,5 +79,6 @@
     </div>
 
     <script src="scripts/TimeDate.js"></script>
+    <script src="scripts/QuoteGenerator.js"></script>
 
 </body>
