feat(style.css): styling for search/quote, shadows

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label>
                 <input type="text" name="q" placeholder="Whats on your mind?" size="125" />
             </label>
-            <input id="submitSearchBtn" type="submit" value="Search">
+            <input id="submitSearchBtn" type="submit" value="🔍">
         </form>
 
     </div>
