--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </ul>
     </div>
 
-    <script type="module" src="scripts/config.js"></script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/TimeDate.js"></script>
     <script src="scripts/InfoGenerator.js"></script>
 
