feat(css, js, html): smoother loads/transitions/hovers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body>
+<body onload="document.body.style.opacity='1'">
 
     <div class="headers">
 
@@ -79,8 +79,8 @@
         </ul>
     </div>
 
-    <script src="scripts/config.js"></script>
-    <script src="scripts/TimeDate.js"></script>
-    <script src="scripts/InfoGenerator.js"></script>
+    <script defer src="scripts/config.js"></script>
+    <script defer src="scripts/TimeDate.js"></script>
+    <script defer src="scripts/InfoGenerator.js"></script>
 
 </body>
