--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="author" content="Ry4nW">
-    <meta name="description" content="A personalized Homepage project to learn basic frontend tools.">
+    <meta name="description" content="A personalized new tab page.">
     <meta name="keywords" content="Homepage, quotes, time, date, search, HTML, CSS, JavaScript">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
